// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> renders 1`] = `
<div
  class="field"
>
  <input
    checked=""
    class="field__input"
    id="field_1"
    type="checkbox"
  />
  <label
    class="field__label"
    for="field_1"
  >
    Jawn
  </label>
</div>
`;

exports[`<Checkbox /> renders with a custom ID 1`] = `
<div
  class="field"
>
  <input
    checked=""
    class="field__input"
    id="foo"
    type="checkbox"
  />
  <label
    class="field__label"
    for="foo"
  >
    Jawn
  </label>
</div>
`;

exports[`<Checkbox /> renders with an error 1`] = `
<div
  class="field field--erroneous"
>
  <input
    aria-labelledby="field_4_label field_4_error"
    checked=""
    class="field__input field__input--erroneous"
    id="field_4"
    type="checkbox"
  />
  <label
    class="field__label field__label--erroneous"
    for="field_4"
    id="field_4_label"
  >
    Jawn
  </label>
  <span
    class="field__error"
    id="field_4_error"
    role="alert"
  >
    Oh no!
  </span>
</div>
`;

exports[`<Checkbox /> renders with custom requiredIndicator 1`] = `
<div
  class="field"
>
  <input
    checked=""
    class="field__input"
    id="field_11"
    type="checkbox"
  />
  <label
    class="field__label"
    for="field_11"
  >
    Jawn
  </label>
</div>
`;

exports[`<Checkbox /> renders with help 1`] = `
<div
  class="field"
>
  <input
    checked=""
    class="field__input"
    id="field_5"
    type="checkbox"
  />
  <label
    class="field__label"
    for="field_5"
  >
    Jawn
    <span
      class="field__help"
    >
      Good luck
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> renders with inline 1`] = `
<div
  class="field field--inline"
>
  <input
    checked=""
    class="field__input field__input--inline"
    id="field_12"
    type="checkbox"
  />
  <label
    class="field__label field__label--inline"
    for="field_12"
  >
    Jawn
  </label>
</div>
`;

exports[`<Checkbox /> renders with large 1`] = `
<div
  class="field field--large"
>
  <input
    checked=""
    class="field__input field__input--large"
    id="field_8"
    type="checkbox"
  />
  <label
    class="field__label field__label--large"
    for="field_8"
  >
    Jawn
  </label>
</div>
`;

exports[`<Checkbox /> renders with required 1`] = `
<div
  class="field"
>
  <input
    aria-required="true"
    checked=""
    class="field__input"
    id="field_10"
    required=""
    type="checkbox"
  />
  <label
    class="field__label"
    for="field_10"
  >
    Jawn
    <span
      class="field__required-indicator"
    >
      *
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> renders with small 1`] = `
<div
  class="field field--small"
>
  <input
    checked=""
    class="field__input field__input--small"
    id="field_9"
    type="checkbox"
  />
  <label
    class="field__label field__label--small"
    for="field_9"
  >
    Jawn
  </label>
</div>
`;

exports[`<Checkbox /> renders with success 1`] = `
<div
  class="field field--success"
>
  <input
    checked=""
    class="field__input field__input--success"
    id="field_6"
    type="checkbox"
  />
  <label
    class="field__label field__label--success"
    for="field_6"
  >
    Jawn
  </label>
</div>
`;

exports[`<Checkbox /> renders with touched 1`] = `
<div
  class="field field--touched field--success"
>
  <input
    checked=""
    class="field__input field__input--touched field__input--success"
    id="field_7"
    type="checkbox"
  />
  <label
    class="field__label field__label--touched field__label--success"
    for="field_7"
  >
    Jawn
  </label>
</div>
`;

exports[`<Checkbox /> renders without a label 1`] = `
<div
  class="field"
>
  <input
    checked=""
    class="field__input"
    id="field_2"
    type="checkbox"
  />
</div>
`;

exports[`<Checkbox /> renders without a wrapper 1`] = `
<input
  checked=""
  class="field__input"
  id="field_3"
  type="checkbox"
/>
`;
